Added onBackPressed() method

--- a/app/src/main/res/layout/activity_x_page.xml
+++ b/app/src/main/res/layout/activity_x_page.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="120dp"
         android:text="Y SAYFASINA GİT"
+        app:backgroundTint="#3F51B5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
